# Spark

./: .gitignore  CMakeLists.txt  LICENSE  Spark.hpp  main.c  main.cpp  test.spark
Spark/: API.cpp  API.hpp  Bool8.hpp  Config.hpp  Env.cpp  Env.hpp  Exception.hpp  Executor.cpp  Executor.hpp  Float64.hpp  Int64.hpp  InterpretedVM.cpp  InterpretedVM.hpp  NativeThread.cpp  NativeThread.hpp  NewThread.cpp  NewThread.hpp  Opcode.hpp  Spark.cpp  Spark.hpp  SparkContext.cpp  SparkContext.hpp  SparkException.hpp  StackBuffer.cpp  StackBuffer.hpp  Thread.cpp  Thread.hpp  Type.cpp  Type.hpp  Types.hpp  VM.cpp  VM.hpp  Value.hpp  VirtualThread.cpp  VirtualThread.hpp
Spark/Compilation/: AST.hpp  BytecodeBuffer.hpp  Compiler.cpp  Compiler.hpp  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp  TokenType.cpp  TokenType.hpp
Spark/Compilation/Lex/: ASTNode.hpp  BinaryExpression.hpp  LexException.hpp  Lexer.cpp  Lexer.hpp  StatementNode.hpp  Token.cpp  Token.hpp  TokenType.cpp  TokenType.hpp
Spark/Compilation/Parse/: ExpressionNode.hpp  NumberExpression.hpp
Spark/Compilation/Parse/AST/: ASTNode.hpp  EvaluateVisitor.cpp  EvaluateVisitor.hpp
Spark/Compilation/Parse/AST/Expressions/: AddExpression.hpp  BinaryExpression.hpp  ConstExpression.cpp  ConstExpression.hpp  DivideExpression.hpp  ExpressionNode.hpp  ModulusExpression.hpp  MultiplyExpression.hpp  (+1 more)
Spark/Compilation/Parse/Types/: Bool.hpp  Int.hpp  Type.cpp  Type.hpp  Value.cpp  Value.hpp
Spark/GC/: AllocateOperation.hpp  CollectOperation.cpp  CollectOperation.hpp  ConcurrentGC.cpp  ConcurrentGC.hpp  GC.cpp  GC.hpp  GCBase.hpp  GCHandle.hpp  GCHandle.tpp  GCNode.cpp  GCNode.hpp  GCOperation.hpp  GCPtr.hpp  GCPtr.tpp  GCType.hpp  IGC.hpp  Ptr.cpp  Ptr.hpp  ReferenceOperation.hpp  SingleThreadedGC.cpp  SingleThreadedGC.hpp  UnreferenceOperation.hpp
Spark/GC/Operations/: AddEntryOperation.hpp  AllocateOperation.hpp  CollectOperation.cpp  CollectOperation.hpp  GCOperation.hpp  ReferenceOperation.hpp  RemoveEntryOperation.hpp  UnreferenceOperation.hpp
Spark/Types/: Array.cpp  Array.hpp  Bool.hpp  Boolean.hpp  CFunction.hpp  Closure.hpp  Coroutine.hpp  Dynamic.hpp  Float.hpp  Float.inl  Float64.hpp  Function.hpp  Int64.hpp  Integer.hpp  Integer.inl  Namespace.hpp  Object.cpp  Object.hpp  Pointer.hpp  String.cpp  String.hpp  Table.hpp  Type.cpp  Type.hpp  TypeID.hpp  TypeTrait.hpp  Value.cpp  Value.hpp
Spark/Utilities/: ConcurrentQueue.hpp
docs/: constructs.md  eval-order.md  expressions.md  ffi.md  function.md  keywords.md  parser.drawio  spark.ebnf  spark.md  statements.md  syntax.md  type.md
spark/: Types.hpp  bool.h  float.h  int.h  spk_bool8.h  thread.h  type.h
spark/types/: array.h  bool.h  float.h  int.h  type.h  value.h
src/: error.hpp  lexer.hpp  main.cpp  result.hpp  syntax.hpp  type.hpp
src/compiler/: ast.hpp  expr.hpp  lex_error.hpp  lex_result.hpp  lexer.cpp  lexer.hpp  lexer.l  lexer_error.hpp  lexer_state.hpp  lexer_utils.cpp  lexer_utils.hpp  parser.cpp  parser.hpp  parser.y  parser_context.hpp  parser_error.hpp  result.hpp  semantic_type.hpp  source_buffer.hpp  token.cpp  token.hpp  token_buffer.hpp  token_type.cpp  token_type.hpp  token_value.hpp
src/compiler/ast/: ast.hpp  expr.hpp  node.hpp  node_visitor.hpp  pattern.hpp  stmt.hpp  type_nodes.hpp  utils.hpp
src/core/: type.hpp
src/frontend/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  lexer.l  lexer_error.hpp  lexer_state.hpp  lexer_utils.cpp  lexer_utils.hpp  literal.hpp  name.hpp  parser.cpp  parser.hpp  parser.y  parser_context.hpp  parser_error.hpp  semantic_type.hpp  semantic_value.hpp  source_buffer.cpp  source_buffer.hpp  source_reader.cpp  source_reader.hpp  syntax.cpp  syntax.hpp  token.hpp  token_buffer.hpp  token_type.cpp  token_type.hpp  token_value.hpp
src/frontend/ast/: ast.hpp  child_visitor.cpp  child_visitor.hpp  equal_visitor.cpp  equal_visitor.hpp  expr.hpp  identifier.hpp  literal.hpp  name.cpp  name.hpp  node.cpp  node.hpp  node_visitor.cpp  node_visitor.hpp  pattern.hpp  stmt.hpp  type_nodes.hpp  utils.hpp  var.hpp
src/frontend/hir/: lua_ir.hpp  lua_ir_emitter.hpp  lua_ir_visitor.hpp
src/frontend/ir/: lua_ir.hpp  lua_ir_emitter.cpp  lua_ir_emitter.hpp  lua_ir_visitor.cpp  lua_ir_visitor.hpp
src/frontend/lexer/: lexer_error.hpp  lexer_state.hpp  lexer_utils.cpp  lexer_utils.hpp  token.hpp  token_buffer.hpp  token_type.cpp  token_type.hpp  token_value.hpp
src/frontend/parser/: parser_context.hpp  parser_error.hpp  parser_unit.cpp  parser_unit.hpp  token_producer.cpp  token_producer.hpp
src/frontend/semantic/: binder.cpp  binder.hpp  binding_visitor.cpp  binding_visitor.hpp  c_emitter.cpp  c_emitter.hpp  env.hpp  foo.c  global_resolver.cpp  global_resolver.hpp  hir.hpp  hir_emitter.cpp  hir_emitter.hpp  lua_ir.cpp  lua_ir.hpp  name_resolver.cpp  name_resolver.hpp  semantic_context.cpp  semantic_context.hpp  semantic_func.cpp  semantic_func.hpp  semantic_resolver.cpp  semantic_resolver.hpp  semantic_type.cpp  semantic_type.hpp  structure_checker.cpp  structure_checker.hpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  type_resolver.cpp  type_resolver.hpp  utils.hpp
src/runtime/: allocator.hpp  drc.cpp  drc.hpp  rc.hpp  spark.hpp  thread.hpp  type.hpp
src/utils/: bigint.hpp  bigreal.hpp  diagnostic.cpp  diagnostic.hpp  error.cpp  error.hpp  location.hpp  result.hpp  trie.cpp  trie.hpp
tests/: lex_error_test.cpp  lex_result_test.cpp  token_test.cpp  trie_test.cpp
tests/compiler/: lex_test.cpp  lexer_test.cpp  parser_test.cpp  token_buffer_test.cpp  token_value_test.cpp  utils.cpp  utils.hpp
tests/frontend/: lex_test.cpp  lexer_test.cpp  parser_test.cpp  source_buffer_test.cpp  source_reader_test.cpp  token_buffer_test.cpp  token_value_test.cpp  utils.cpp
tests/frontend/ast/: name_value_test.cpp
tests/frontend/data/: potsOfGold.spark
tests/frontend/lexer/: lex_test.cpp  lexer_test.cpp  token_buffer_test.cpp  token_value_test.cpp
tests/frontend/parser/: parser_test.cpp  parser_unit_test.cpp  token_producer_test.cpp
tests/frontend/semantic/: name_resolver_test.cpp
tests/runtime/: drc_test.cpp
(+4 files in other folders)
